[package]
name = "kronos"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
toml = "0.8.19"
arboard = "3.4.1"
